Shivansh | Test | Dark Mode For Branch Theme Popup fixes

--- a/apps/web-giddh/src/app/userDetails/components/subscriptions-plans/subscriptions-plans.component.scss
+++ b/apps/web-giddh/src/app/userDetails/components/subscriptions-plans/subscriptions-plans.component.scss
@@ -170,7 +170,7 @@
 }
 .transactions-popup {
     width: 360px;
-    background: $white;
+    background: var(--popup-background-color);
     box-shadow: 0px 3px 6px $black-russian;
     padding: 15px;
     z-index: 9;
