--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -55,6 +55,10 @@ $custom-typography: mat-typography-config(
     overflow-x: hidden;
 }
 
+.mat-calendar-body-cell-content {
+    color: var(--datepicker-secondary-date-color);
+}
+
 @media (max-width: 768px) {
     .text-left-sm {
         text-align: left !important;
@@ -2821,6 +2825,10 @@ a.btn.btn-xs.btn-link.pull-right {
     position: relative;
     background: var(--primary-header-background-color) !important;
     color: $white;
+}
+
+.modal-body {
+    background-color: var(--popup-background-color) !important;
 }
 
 .close-modal {
