--- a/apps/web-giddh/src/assets/css/themes/dark.scss
+++ b/apps/web-giddh/src/assets/css/themes/dark.scss
@@ -69,6 +69,7 @@ body.dark-theme {
     --datepicker-header-color: #78af8f;
     --datepicker-month-name-color: #ffffff;
     --datepicker-date-color: #ffffff;
+    --datepicker-secondary-date-color: #ffffff;
     --datepicker-date-icon-color: #ffffff;
     --datepicker-rightside-list-text-color: #ffffff;
     --datepicker-rightside-list-primary-color-text-hover: #00000033;
